[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-geometry-core"
version = "0.7.3"
description = "A python wrapper for Ansys Geometry service"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ansys-api-geometry==0.4.10",
    "ansys-tools-path>=0.3,<1",
    "ansys-tools-visualization-interface>=0.2.6,<1",
    "beartype>=0.11.0,<0.20",
    "grpcio>=1.35.0,<2",
    "grpcio-health-checking>=1.45.0,<2",
    "numpy>=1.20.3,<3",
    "Pint>=0.18,<1",
    "protobuf>=3.20.2,<5.28",
    "pyvista>=0.37.0,<1",
    "requests>=2,<3",
    "scipy>=1.7.3,<2",
    "semver>=3,<4",
    "six>=1.16.0,<2",
    "vtk>=9,<10",
]

[project.optional-dependencies]
all = [
    "ansys-platform-instancemanagement>=1.0.3,<2",
    "docker>=6.0.1,<8",
    "pyvista[jupyter]>=0.38.1,<1",
]
tests = [
    "ansys-platform-instancemanagement==1.1.2",
    "ansys-tools-path==0.6.0",
    "ansys-tools-visualization-interface==0.4.5",
    "beartype==0.19.0",
    "docker==7.1.0",
    "grpcio==1.66.2",
    "grpcio-health-checking==1.66.2",
    "numpy==2.1.2",
    "Pint==0.24.3",
    "protobuf==5.27.5",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-pyvista==0.1.9",
    "pytest-xvfb==3.0.0",
    "pyvista[jupyter]==0.44.1",
    "requests==2.32.3",
    "scipy==1.14.1",
    "semver==3.0.2",
    "six==1.16.0",
    "vtk==9.3.1",
]
tests-minimal = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-pyvista==0.1.9",
    "pytest-xvfb==3.0.0",
]
doc = [
    "ansys-sphinx-theme[autoapi]==1.1.2",
    "ansys-tools-path==0.6.0",
    "ansys-tools-visualization-interface==0.4.5",
    "beartype==0.19.0",
    "docker==7.1.0",
    "grpcio==1.66.2",
    "grpcio-health-checking==1.66.2",
    "ipyvtklink==0.2.3",
    "jupyter_sphinx==0.5.3",
    "jupytext==1.16.4",
    "myst-parser==4.0.0",
    "nbconvert==7.16.4",
    "nbsphinx==0.9.5",
    "notebook==7.2.2",
    "numpydoc==1.8.0",
    "numpy==2.1.2",
    "panel==1.5.2",
    "Pint==0.24.3",
    "protobuf==5.27.5",
    "pyvista[jupyter]==0.44.1",
    "requests==2.32.3",
    "scipy==1.14.1",
    "semver==3.0.2",
    "six==1.16.0",
    "sphinx==8.0.2",
    "sphinx-autodoc-typehints==2.5.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-jinja==2.0.2",
    "trame-vtk==2.8.10",
    "vtk==9.3.1",
]

[project.urls]
Source = "https://github.com/ansys/pyansys-geometry"
Issues = "https://github.com/ansys/pyansys-geometry/issues"
Discussions = "https://github.com/ansys/pyansys-geometry/discussions"
Documentation = "https://geometry.docs.pyansys.com"
Releases = "https://github.com/ansys/pyansys-geometry/releases"
Changelog = "https://github.com/ansys/pyansys-geometry/blob/main/doc/source/changelog.rst"

[tool.flit.module]
name = "ansys.geometry.core"

[tool.ruff]
line-length = 100
fix = true
extend-exclude = ["tests/integration/files"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    "TD002", # Missing author in TODOs comment
]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files.
"__init__.py" = ["F401"]
# Ignore `E402` (module level import not at top of file) in `src/ansys/geometry/core/__init__.py`.
"src/ansys/geometry/core/__init__.py" = ["E402"]
# Ignore `D` rules everywhere except for the `src/` directory.
"!src/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys.geometry.core"]

[tool.coverage.run]
source = ["ansys.geometry"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.geometry --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term -vv --image_cache_dir tests/integration/image_cache --add_missing_images"
testpaths = ["tests"]

[tool.towncrier]
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
template = "doc/changelog.d/changelog_template.jinja"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pyansys-geometry/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyansys-geometry/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
